--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "acorn": "^7.3.1",
     "axios": "^0.19.2",
     "blob-util": "^2.0.2",
+    "caniuse-lite": "^1.0.30001733",
     "cornerstone-core": "^2.3.0",
     "cornerstone-file-image-loader": "^0.3.0",
     "cornerstone-math": "^0.1.8",
