--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -79,6 +79,7 @@
     "@babel/core": "^7.10.5",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
+    "cross-env": "^10.0.0",
     "npm-run-all": "^4.1.5"
   }
 }
